Moved alphabet navigation placement in page.  Moved encoding in menu to Advanced tab-- as suggested in emails.  Fixed invisible text in table headers.
svn: r12386

--- a/src/data/Web_Visually.css
+++ b/src/data/Web_Visually.css
@@ -269,7 +269,7 @@ table.infolist {
 }
 table.infolist tr th {
     font:normal 1.1em/1.2em serif;
-    color:#FFF;
+    color:#000;
     margin:0;
     padding:.2em 10px;
     background-color:#6AF364;
